scrollbar in info window fixed, labels fully shown.

--- a/static/css/accordion.css
+++ b/static/css/accordion.css
@@ -1,5 +1,5 @@
 .accordion-container{
-	width: 100%;
+	width: 98%;
 	margin: 30px 2px 0px 0px;
 }
 
